# zetk

./: .cookiecutter.json  .flake8  .gitignore  CONTRIBUTING.rst  README.rst  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release.yml
docs/: api.rst  conf.py  index.rst  reference.rst  usage.rst
docs/api/: add.rst  compile.rst  defaults.rst  initialize.rst  monkeypatch.rst  parse.rst  setup.rst
docs/changelog/: v0.2.1.rst  v0.2.2.rst  v0.2.3.rst  v0.3.0.rst
docs/getting_started/: installation.rst
docs/usage/: configuration.rst  references.rst  styles.rst  zettelkasten.rst  zettels.rst
src/zettelkasten/: __init__.py  __main__.py  add.py  cli.py  compile.py  defaults.py  initialize.py  monkeypatch.py  parse.py  setup.py
tests/: __init__.py  test_main.py
tests/test_api/: test_add.py  test_compile.py  test_init.py  test_monkey_patch.py  test_parse.py  test_setup.py
