[tool.poetry]
name = "zettelkasten"
version = "0.2.3"
description = "CLI interface for managing a folder based zettelkasten using emacs org-mode file zettels and a bibtex reference system"

authors = [
  "tZ3ma <mathias.ammon@tuhh.de>"
]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/tZ3ma/zetk"
repository = "https://github.com/tZ3ma/zetk"
documentation = "https://test.readthedocs.zetk"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = ['zettelkasten', 'org-mode', 'bibtex']  # Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  # Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]

[tool.poetry.urls]
Changelog = "https://github.com/tZ3ma/zetk/releases"

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"zettelkasten" = "zettelkasten.cli:app"
"zk" = "zettelkasten.cli:app"
"zetk" = "zettelkasten.cli:app"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.1"
# typer = "^0.4.0"
rich = "^10.16.1"


[tool.poetry.dev-dependencies]
darglint = "^1.8.0"
isort = "^5.8.0"
pyupgrade = "^2.31.1"
black = "^21.5b1"
mypy = "^0.930"
typeguard = "^2.13.3"
bandit = "^1.7.0"
safety = "^1.10.3"
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^6.1"}
pylint = "^2.8.2"
pydocstyle = "^6.0.0"
pre-commit = "^2.12.1"
sphinx = "^4.3.2"
sphinx-paramlinks = "^0.5.2"
sphinx-autobuild = "^2021.3.14"
sphinx-click = "^3.0.2"
sphinx-rtd-theme = "^1.0.0"
pytest-dependency = "^0.5.1"
smmap = "^5.0.0"
GitPython = "^3.1.16"
smmap2 = "^3.0.1"
Pygments = "^2.9.0"
importlib-metadata = "^4.10.0"
identify = "^2.2.4"
furo = "^2021.11.23"

[tool.black]
# https://github.com/psf/black
line-length = 80
target-version = ["py37"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 80

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["fogd", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

# pyproject.toml
